--- a/my-project/package.json
+++ b/my-project/package.json
@@ -22,7 +22,8 @@
     "@angular/router": "~7.0.0",
     "core-js": "^2.5.4",
     "rxjs": "~6.3.3",
-    "zone.js": "~0.8.26"
+    "zone.js": "~0.8.26",
+    "webpack-dev-server": ">=3.1.11"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.10.6",
